--- a/css/core.css
+++ b/css/core.css
@@ -1,98 +1,133 @@
 @charset "utf-8";
 
 .nanumsquare {
-    font-family: 'NanumSquare', sans-serif !important;
+  font-family: "NanumSquare", sans-serif !important;
 }
 
 .title_none {
-    display: none;
+  display: none;
 }
 
 /* 헤더영역 */
 header {
-    width: 80px;
-    height: 100%;
-    position: fixed;
-    background-color: #f4f6fd;
+  width: 230px;
+  height: 100%;
+  position: fixed;
+  transition: 0.5;
+  overflow: hidden;
+}
+
+#ham {
+  width: 45px;
+  height: 45px;
+  background-color: #0b20fc;
+  border-radius: 20%;
+  border: none;
+  left: 20px;
+  top: 120px;
+  position: absolute;
+  z-index: 100;
+  cursor: pointer;
+}
+
+#ham>svg {
+  color: #fff;
+}
+
+header>h1 {
+  padding-top: 30px;
+  width: 180px;
+  height: 150px;
+  margin: 0 auto;
+}
+
+header>h1>a>img {
+  width: 100%;
 }
 
 .h_inner {
-    width: 230px;
-    height: 100%;
-    position: relative;
-    background-color: #f4f6fd;
-    padding-left: 15px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+  width: 230px;
+  height: 100%;
+  position: relative;
+  background-color: #f4f6fd;
+  padding-left: 15px;
+  border-top-right-radius: 40px;
+  border-bottom-right-radius: 40px;
+  transition: 0.5;
+  overflow: hidden;
 }
 
-.h_inner h1 {
-    padding-top: 30px;
-    width: 180px;
+#gnb {
+  width: 200px;
+  font-size: 20px;
+  padding-top: 30px;
+  font-family: "NanumSquare", sans-serif !important;
 }
 
-.h_inner h1>a>img {
-    width: 100%;
+#gnb>li {
+  width: 100%;
+  text-transform: capitalize;
+  position: relative;
+  overflow: hidden;
+  transition: 0.5s;
 }
 
-.gnb>ul {
-    width: 200px;
-    font-size: 20px;
-    font-family: 'NanumSquare', sans-serif !important;
-    ;
+#gnb>li:nth-child(2) {
+  height: 70px;
 }
 
-.gnb>ul>li {
-    width: 100%;
-    text-transform: capitalize;
-    position: relative;
-    overflow: hidden;
+#gnb>li:nth-child(3) {
+  height: 70px;
 }
 
-.gnb svg {
-    width: 25px;
-    transform: translateY(6px);
-    margin-right: 10px;
+#gnb svg {
+  width: 25px;
+  transform: translateY(6px);
+  margin-right: 10px;
 }
 
-.gnb>ul>li>a {
-    width: 100%;
-    height: 55px;
-    display: block;
-    margin: 10px 0px;
-    padding: 8px 40px;
-    border-radius: 10px;
-    transition: 0.5s;
+#gnb>li>a {
+  width: 100%;
+  height: 55px;
+  display: block;
+  margin: 10px 0px;
+  padding: 8px 40px;
+  border-radius: 10px;
+  transition: 0.5s;
 }
 
-.gnb>ul>li:first-child a {
-    margin: 5px 0px;
+#gnb>li:first-child a {
+  margin: 5px 0px;
 }
 
-.gnb>ul>li>a:hover {
-    background-color: #335dff;
-    color: #fff;
+#gnb>li>a:hover {
+  background-color: #335dff;
+  color: #fff;
 }
 
-.sub {}
+#gnb>li:nth-child(2):hover {
+  height: 170px;
+}
+
+#gnb>li:nth-child(3):hover {
+  height: 140px;
+}
 
 .sub>li {
-    padding-left: 40px;
-    width: 100%;
-    font-size: 17px;
-    line-height: 35px;
-    font-weight: bold;
+  padding-left: 40px;
+  width: 100%;
+  font-size: 17px;
+  line-height: 35px;
+  font-weight: bold;
 }
 
 .sub>li>a {
-    color: #6b789c;
-    display: block;
-    transition: 0.5s;
+  color: #6b789c;
+  display: block;
+  transition: 0.5s;
 }
 
 .sub>li>a:hover {
-    color: #081435;
-    text-decoration: underline;
+  color: #081435;
+  text-decoration: underline;
 }
-
-.lnb {}
