--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,41 @@
 
 section {
   width: 100%;
-  padding-left: 230px;
-  width: 100%;
-  height: 400px;
+  height: 100%;
+  position: fixed;
+  overflow: hidden;
 }
 
+section img {
+  position: absolute;
+  width: 25%;
+}
+
+
+section img:first-child {
+  width: 45%;
+  left: 0%;
+  bottom: -25%;
+}
+
+section img:nth-child(2) {
+  right: 0;
+  bottom: 0;
+}
+
+.ba_tast {
+  width: 90%;
+}
+
+/* 
 .visual {
   width: 100%;
+  height: 970px;
   padding: 20px;
-  background-color: darkgray;
+  /* background-image: url('../image/main_ba_left.png');
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size: 400px; */
 }
 
 .visual h2 {
@@ -18,3 +44,5 @@ section {
   height: 50px;
   font-size: 40px;
 }
+
+*/
