--- a/css/core.css
+++ b/css/core.css
@@ -47,6 +47,8 @@ header>h1>a>img {
   width: 100%;
 }
 
+
+
 .h_inner {
   width: 230px;
   height: 100%;
@@ -181,4 +183,46 @@ header>h1>a>img {
 
 .tab_gnb li:hover a {
   color: #0b20fc;
+}
+
+section {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  padding-left: 230px;
+}
+
+
+.p_lt>ul {
+  width: 100%;
+  height: 40px;
+  border-bottom: 1px solid #ccc;
+  position: relative;
+  display: flex;
+  font-size: 16px;
+  text-transform: capitalize;
+}
+
+.p_lt>ul>li {
+  position: absolute;
+  padding: 10px 0px;
+}
+
+.p_lt>ul>li,
+.p_lt>ul>li a {
+  color: #4d4d4d;
+}
+
+.p_lt>ul>li:first-child {
+  left: 0;
+}
+
+.p_lt>ul>li:nth-child(2) {
+  left: 50%;
+}
+
+.p_lt>ul>li:last-child {
+  top: 0;
+  right: 10px;
 }
