--- a/css/graphics.css
+++ b/css/graphics.css
@@ -131,26 +131,72 @@
     overflow: hidden;
     position: relative;
     margin: 15px;
-    background-color: rgb(196, 250, 46);
 }
 
-.cont ul li:hover {
-    box-shadow: 3px 1px 8px 6px rgba(209, 209, 209, 0.4);
+.cont ul li a {
+    width: 330px;
+    height: 250px;
+    float: left;
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+    background-color: #000;
+
+}
+
+.cont ul li:hover img {
+    opacity: 0.2;
+}
+
+.cont ul li:hover span {
+    opacity: 1;
+}
+
+.cont ul li:hover a {
+    background-color: #0b20fc;
+}
+
+.cont ul li:hover .title {
+    display: none;
 }
 
 .cont ul li>a>img {
     position: absolute;
     width: 100%;
     top: -20px;
-
+    transition: 0.5s;
+    opacity: 0.5;
 }
 
-.cont ul li>a>p {
-    position: absolute;
+.cont ul li>a span {
+    display: block;
+    text-align: center;
+    z-index: 999;
+    color: #fff;
     width: 100%;
+    height: 100%;
+    opacity: 0;
+    position: absolute;
+    line-height: 30px;
+    padding-top: 27%;
+    font-size: 20px;
+}
+
+.cont .title {
+    width: 60%;
     height: 80px;
     bottom: 0;
-    background-color: #fff;
+    display: block;
+    left: 15px;
+    position: absolute;
+    color: #fff;
+    padding-top: 15px;
+    transition: 0.5s;
+}
+
+.cont .title span {
+    display: block;
+    font-size: 20px;
 }
 
 .cont .more {
